#514: allow to execute an application which is in the path